# tomori-lang-cpp

./: CMakeLists.txt  README.md  TomoriLang.md  dbg_console.h  main.cpp  test.tl
core/: AST.cpp  AST.h  Builtin.h  Define.h  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Value.h
